--- a/docroot/themes/custom/site/templates/_partials/footer.html.twig
+++ b/docroot/themes/custom/site/templates/_partials/footer.html.twig
@@ -47,7 +47,7 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-8">
                             <div class="layout__footer-bottom-copyright">
-                                <p>{{ '© 2011-2017, Vejle Idrætshøjskole. All rights reserved' | trans }}</p>
+                                <p>{{ '© 2011-2018, Vejle Idrætshøjskole. All rights reserved' | trans }}</p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-4">
@@ -60,7 +60,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.facebook.tooltip }}">
+                                               title="{{ theme_settings.social.facebook.tooltip | trans }}">
                                                 <span class="icon icon-facebook"></span>
                                             </a>
                                         </li>
@@ -72,7 +72,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.twitter.tooltip }}">
+                                               title="{{ theme_settings.social.twitter.tooltip | trans }}">
                                                 <span class="icon icon-twitter"></span>
                                             </a>
                                         </li>
@@ -84,7 +84,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.googleplus.tooltip }}">
+                                               title="{{ theme_settings.social.googleplus.tooltip | trans }}">
                                                 <span class="icon icon-google-plus"></span>
                                             </a>
                                         </li>
@@ -96,7 +96,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.linkedin.tooltip }}">
+                                               title="{{ theme_settings.social.linkedin.tooltip | trans }}">
                                                 <span class="icon icon-linkedin"></span>
                                             </a>
                                         </li>
@@ -108,7 +108,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.pinterest.tooltip }}">
+                                               title="{{ theme_settings.social.pinterest.tooltip | trans }}">
                                                 <span class="icon icon-pinterest"></span>
                                             </a>
                                         </li>
@@ -120,7 +120,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.instagram.tooltip }}">
+                                               title="{{ theme_settings.social.instagram.tooltip | trans }}">
                                                 <span class="icon icon-instagram"></span>
                                             </a>
                                         </li>
@@ -132,7 +132,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.youtube.tooltip }}">
+                                               title="{{ theme_settings.social.youtube.tooltip | trans }}">
                                                 <span class="icon icon-youtube"></span>
                                             </a>
                                         </li>
@@ -144,7 +144,7 @@
                                                target="_blank"
                                                data-toggle="tooltip"
                                                data-placement="top"
-                                               title="{{ theme_settings.social.vimeo.tooltip }}">
+                                               title="{{ theme_settings.social.vimeo.tooltip | trans }}">
                                                 <span class="icon icon-vimeo"></span>
                                             </a>
                                         </li>
