--- a/docroot/themes/custom/site/src/styles/theme/components/_panels.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_panels.scss
@@ -86,7 +86,7 @@
 
       margin-top: -10px;
 
-      content: $icon-info-circle;
+      content: unicode($icon-info-circle);
     }
     &[aria-expanded=false]:after {
       content: "+";
