--- a/docroot/themes/custom/site/src/styles/theme/components/_breadcrumb.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_breadcrumb.scss
@@ -53,7 +53,7 @@ $breadcrumb-active-background-color: $brand-primary;
           @extend .icon;
           display: inline-block;
 
-          content: $icon-home;
+          content: unicode($icon-home);
 
           font-size: $font-size-base;
           color: inherit;
