--- a/docroot/themes/custom/site/src/styles/theme/entity/taxonomy-term/radio-selection/_vih_class.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/taxonomy-term/radio-selection/_vih_class.scss
@@ -42,7 +42,7 @@
             position: absolute;
 
             right: 0;
-            content: $icon-account-circle;
+            content: unicode($icon-account-circle);
           }
         }
 
