--- a/docroot/themes/custom/site/src/styles/theme/entity/node/full/_full.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/node/full/_full.scss
@@ -14,6 +14,10 @@
 // Styling
 // --------------------------------------------------
 
+.is-unpublished {
+  background-color: transparent;
+}
+
 article {
   .field {
     .field--label {
