VI-303 Only show travel payment when larger than 0.

--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -383,14 +383,16 @@
                                                 {{ content.field_vih_course_week_price }}
                                             </div>
                                         </div>
-                                        <div class="price-table col-sm-12 col-md-3">
-                                            <div class="table-heading">
-                                                {{ "Travel payment"|trans }}
-                                            </div>
-                                            <div class="table-cell">
-                                                DKK {{ content.travel_price|number_format(2, ',', '.') }}
-                                            </div>
-                                        </div>
+                                      {% if content.travel_price > 0 %}                              
+                                          <div class="price-table col-sm-12 col-md-3">
+                                              <div class="table-heading">
+                                                  {{ "Travel payment"|trans }}
+                                              </div>
+                                              <div class="table-cell">
+                                                  DKK {{ content.travel_price|number_format(2, ',', '.') }}
+                                              </div>
+                                          </div>
+                                      {% endif %}
                                     </div>
                                 </div>
                             </div>
