--- a/docroot/themes/custom/site/templates/node/teaser/node--news--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--news--teaser.html.twig
@@ -7,7 +7,8 @@
     <div class="entity-teaser__body">
 
         {# Begin - body #}
-        {{ content.body }}
+        {% set text = content.body|render %}
+        {{ text|striptags }}
         {# End - body #}
 
         {# Begin - published at #}
