--- a/docroot/themes/custom/site/templates/field/field--user--compact--field-vih-user-photo.html.twig
+++ b/docroot/themes/custom/site/templates/field/field--user--compact--field-vih-user-photo.html.twig
@@ -69,7 +69,7 @@ label_display == 'visually_hidden' ? 'sr-only',
                 </div>
 
                 <h5 class="field field--name-field-vih-user-title field--type-string field--label-hidden field--item f-pale">
-                    {{ user.field_vih_user_title.value }}
+                    {{ user.field_vih_user_job_title.value }}
                 </h5>
 
                 {{ item.content }}
