--- a/docroot/themes/custom/site/templates/user/compact/user--compact.html.twig
+++ b/docroot/themes/custom/site/templates/user/compact/user--compact.html.twig
@@ -12,7 +12,7 @@
             {{ user.field_vih_user_name_first.value }}
             {{ user.field_vih_user_name_last.value }}
           </h3>
-          {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_vih_user_name_first", "field_vih_user_name_last") }}
+          {{ content|without("field_vih_user_phone", "field_vih_user_photo", "field_vih_user_name_first", "field_vih_user_name_last") }}
         </td>
         <td class="teacher-contact-info hidden-xs">
           <h5>{{ "Contact information"|trans }}:</h5>
@@ -30,7 +30,7 @@
             {{ user.field_vih_user_name_first.value }}
             {{ user.field_vih_user_name_last.value }}
           </h3>
-          {{ content|without("field_vih_user_title", "field_vih_user_phone", "field_vih_user_photo", "field_vih_user_name_first", "field_vih_user_name_last") }}
+          {{ content|without("field_vih_user_phone", "field_vih_user_photo", "field_vih_user_name_first", "field_vih_user_name_last") }}
         </td>
       </tr>
       <tr class="visible-xs">
