--- a/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
@@ -110,6 +110,31 @@ $lg-banner-title-font-size: 46px;
   background-size: 100%;
 }
 
+.region-banner {
+
+  .form-group:last-child {
+    margin-bottom: 0; // Overriding a way to global override
+  }
+
+  .owl-controls {
+    position: absolute;
+
+    z-index: 1000;
+
+    left: 0;
+    right: 0;
+
+    bottom: $xs-sectioned-skewed-angle-height * 1px;
+
+    .owl-page {
+
+      span {
+        background: #fff;
+      }
+    }
+  }
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -170,6 +195,13 @@ $lg-banner-title-font-size: 46px;
     width: 140px;
     height: 140px;
   }
+
+  .region-banner {
+
+    .owl-controls {
+      bottom: $sm-sectioned-skewed-angle-height * 1px;
+    }
+  }
 }
 
 // Desktop - and up
@@ -205,6 +237,13 @@ $lg-banner-title-font-size: 46px;
 
     right: 35px;
   }
+
+  .region-banner {
+
+    .owl-controls {
+      bottom: $md-sectioned-skewed-angle-height * 1px;
+    }
+  }
 }
 
 // Large desktop - and up
@@ -236,6 +275,13 @@ $lg-banner-title-font-size: 46px;
     height: 250px;
 
     right: 50px;
+  }
+
+  .region-banner {
+
+    .owl-controls {
+      bottom: $lg-sectioned-skewed-angle-height * 1px;
+    }
   }
 }
 
