--- a/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
@@ -1,5 +1,15 @@
 <div class="banner" style="background-image: url({{ content.field_vih_image[0]['#markup'] }})">
 
+    <!-- Begin - logo -->
+    <div class="banner__logo">
+        <svg width='100%' height='100%' viewBox="0 0 100 100" preserveAspectRatio="none">
+            <polygon points="107 0, 0 100, 100 100" fill="rgba(0, 188, 255, 0.85)" id="svgoverlay" />
+        </svg>
+
+        <div class="banner__logo__image"></div>
+    </div>
+    <!-- End - logo -->
+
     <div class="banner__inner">
         <div class="container">
 
