VI-377 Apostrophe does not work in headlines

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -54,7 +54,7 @@
                                     {% elseif term.field_vih_top_banner_text.value %}
                                         <h1 class="banner__heading__title">{{ term.field_vih_top_banner_text.value }}</h1>
                                     {% elseif page['#title'] %}
-                                        <h1 class="banner__heading__title">{{ page['#title'] }}</h1>
+                                        <h1 class="banner__heading__title">{{ page['#title'] | raw }}</h1>
                                     {% endif %}
 
                                 </div>
