--- a/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_banner.scss
@@ -83,6 +83,7 @@ $lg-banner-title-font-size: 46px;
 .banner__heading__title {
   @extend h1;
   font-size: $xs-banner-title-font-size;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
 
   color: #fff;
 }
