--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-cource--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-cource--teaser.html.twig
@@ -38,7 +38,11 @@
         <h4{{ title_attributes }}>
           {{ label }}
         </h4>
-        {{ content.body }}
+
+        {# Begin - short description #}
+        {{ content.field_short_description }}
+        {# End - short description #}
+
       </div>
       <div class="teaser-button">
         <button class="btn btn-default" hreflang="da">Læs mere</button>
