--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-short-course--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-short-course--teaser.html.twig
@@ -36,9 +36,9 @@
       <h2 class="entity-teaser__heading__title heading-h4">{{ label }}</h2>
     </div>
 
-    {# Begin - body #}
-    {{ content.body }}
-    {# End - body #}
+    {# Begin - short description #}
+    {{ content.field_short_description }}
+    {# End - short description #}
 
   </div>
   <!-- End - body -->
