--- a/docroot/themes/custom/site/templates/node/list-advanced/node--event--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/node/list-advanced/node--event--list-advanced.html.twig
@@ -36,9 +36,9 @@
         class="entity-list-advanced__heading__title heading-h4">{{ label }}</h2>
     </div>
 
-    {# Begin - body #}
-    {{ content.body }}
-    {# End - body #}
+    {# Begin - short description #}
+    {{ content.field_short_description }}
+    {# End - short description #}
 
   </div>
   <!-- End - body -->
