--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -70,7 +70,7 @@
                                 {% if content.course_period_start or content.course_period_end %}
                                     <div class="boxy boxy--time-period">
                                         <div class="boxy__heading">
-                                            <h2 class="boxy__heading__title heading-h4">{{ 'Course start' | trans }}</h2>
+                                            <h2 class="boxy__heading__title heading-h4">{{ 'Course period' | trans }}</h2>
                                         </div>
 
                                         <div class="boxy__body">
